# Astral

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aabb.h  box.h  bvh.h  camera.h  constant_medium.h  flip_normals.h  hittable.h  hittablelist.h  image_texture.h  isotropic.h  main.cpp  material.h  moving_sphere.h  perlin.h  ppmviewer.py  random.h  ray.h  readme.md  rotate.h  scene.h  sphere.h  test.cpp  texture.h  translate.h  vec3.h  xy_rect.h  xyz_rect.h
.github/workflows/: auto-clang-format.yml
config/: config.hpp
include/: hittable.h  hittablelist.h  material.h  random.h  ray.h  sphere.h  vec3.h
include/Astral/: aabb.h  box.h  bvh.h  camera.h  constant_medium.h  flip_normals.h  hittable.h  hittablelist.h  image_texture.h  isotropic.h  material.h  moving_sphere.h  perlin.h  random.h  ray.h  render.h  rotate.h  sphere.h  texture.h  translate.h  triangle.h  vec3.h  xyz_rect.h
renderer/: CMakeLists.txt  config.hpp  configure_project.cmake  main.cpp  scene.h
src/: aabb.cpp  box.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  dummpy.cpp  flip_normals.cpp  hittable.cpp  hittablelist.cpp  image_texture.cpp  isotropic.cpp  material.cpp  moving_sphere.cpp  perlin.cpp  random.cpp  render.cpp  rotate.cpp  sphere.cpp  translate.cpp  triangle.cpp  xyz_rect.cpp
test/: AA100.ppm  AA5.ppm  diffuse avoid shadow cane.ppm  diffuse gamma correction.ppm  diffuse.ppm  main.cpp  scene.h  spec.ppm  test2.ppm
tests/: CMakeLists.txt
tests/scene1/: CMakeLists.txt  main.cpp  scene.h
